# life_finance

./: .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  DESIGN.md  README.md  balance-lab.config.json  design-qa.md  drizzle.config.ts  eslint.config.mjs  idea.md  next-env.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vercel.json  vitest.config.ts
.codex/: AGENTS.md
.design-sync/: config.json  ds-entry.ts  ds-shim.ts  flatten-css.mjs
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
docs/: ANIMATIONS.md  ASSETS.md  CHARACTER-DEVELOPMENT.md  CHARACTER-RULE.md  CHARACTERS.md  CHARACTER_RULES.md  DESIGN_SYSTEM.md  DIALOGUE.md  EVENTS.md  GAME.md  GAMEPLAY.md  README.md  SCREENS.md
drizzle/: 0000_initial_persistence.sql  0001_dizzy_maverick.sql  0002_flowery_rick_jones.sql  0003_previous_echo.sql  0004_material_lord_tyger.sql  0005_milky_mentor.sql  0006_quiet_photon.sql  0007_fantastic_shadow_king.sql  0008_brief_gorilla_man.sql  0009_gifted_meteorite.sql
scripts/: balance-lab-cli.ts  balance-lab-code-version.ts  balance-lab-worker.mjs  balance-lab-worker.ts  check-test-layout.mjs  generate-operational-event-dataset.ts  migrate-production.mjs  run-balance-lab.mjs  run-operational-event-dataset.mjs  typescript-loader.mjs  (+1 more)
services/tax/: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
services/tax/api/: index.py
services/tax/tax_service/: __init__.py  app.py  calculator.py  models.py
services/tax/tests/: test_api.py  test_calculator.py
(+794 files in other folders)
